# ScrapingPersoenlich

./: persoenlich.csv  persoenlich.py  persoenlich_after_fix.csv  persoenlich_old.csv  pyproject.toml
